--- a/Frontend/Pages/Index.razor
+++ b/Frontend/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Bienvenue!</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Application de gestion d'événement</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+Cette application vous permettra de gérer plus facilement les événements que vous voulez planifier.
