--- a/Frontend/Shared/NavMenu.razor
+++ b/Frontend/Shared/NavMenu.razor
@@ -15,6 +15,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="evenements/create">
+                <span class="oi oi-plus" aria-hidden="true"></span> Planifier
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="evenements">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Événements
             </NavLink>
